添加标签页图标

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!--从Microsoft CDN获取jQuery-->
     <!--<script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.7.0.js"></script>-->
     <link rel="stylesheet" href="style.css"/>
+    <link rel="icon" href="https://httpd.apache.org/favicon.ico">
   </head>
   <body>
     <noscript id="noscript">
