--- a/index_zh.html
+++ b/index_zh.html
@@ -16,6 +16,7 @@
     <!--<script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.7.0.js"></script>-->
     <!--从Microsoft CDN获取jQuery-->
     <link rel="stylesheet" href="style.css"/>
+    <link rel="icon" href="https://httpd.apache.org/favicon.ico">
   </head>
   <body>
     <noscript id="noscript">
@@ -186,7 +187,7 @@
               <a href="http://kr-nc-bgp-1.openfrp.top:52440/" rel="nofollow">网盘</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
               <a href="./uptime-status/index.html" rel="nofollow">服务器状态监控</a>
-              <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
+              <a href="http://guguan123.github.io/Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
             </p>
             <p>
               <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
