--- a/index_zh.html
+++ b/index_zh.html
@@ -171,11 +171,11 @@
               <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
             </p>
             <p>
-              <a href="http://guguan.freehk.svipss.top/" rel="nofollow">由飞鸽代理的页面</a>
-              <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
-              <a href="http://guguan123.github.io/" rel="nofollow">由Github托管的页面</a>
-              <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
-              <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
+              <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">由飞鸽代理的页面</a>
+              <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
+              <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">由Github托管的页面</a>
+              <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
+              <a href="http://guguan123.ysepan.com/" rel="nofollow" class="change-protocol">永硕E盘</a>
             </p>
           </div>
           <div id="b" style="display:none">  <!--通过内网穿透访问-->
@@ -187,13 +187,13 @@
               <a href="http://kr-nc-bgp-1.openfrp.top:52440/" rel="nofollow">网盘</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
               <a href="./uptime-status/index.html" rel="nofollow">服务器状态监控</a>
-              <a href="http://guguan123.github.io/Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
+              <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
             </p>
             <p>
-              <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
-              <a href="http://guguan123.github.io/" rel="nofollow">由Github托管的页面</a>
-              <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
-              <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
+              <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
+              <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">由Github托管的页面</a>
+              <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
+              <a href="http://guguan123.ysepan.com/" rel="nofollow" class="change-protocol">永硕E盘</a>
             </p>
           </div>
           <div id="c" style="display:none">  <!--访问的是云服务器（废弃）-->
@@ -204,11 +204,11 @@
               <a href="./uptimeStatusRevise/index.html" rel="nofollow">服务器状态监控</a>
             </p>
             <p>
-              <a href="http://guguan.freehk.svipss.top/" rel="nofollow">由飞鸽代理的页面</a>
-              <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
-              <a href="http://guguan123.github.io/" rel="nofollow">由Github托管的页面</a>
-              <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
-              <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
+              <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">由飞鸽代理的页面</a>
+              <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
+              <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">由Github托管的页面</a>
+              <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
+              <a href="http://guguan123.ysepan.com/" rel="nofollow" class="change-protocol">永硕E盘</a>
             </p>
           </div>
           <div id="d">  <!--访问的是GitHub Pages-->
@@ -217,13 +217,13 @@
               <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
             </p>
             <p>
-              <a href="http://guguan.freehk.svipss.top/" rel="nofollow">由飞鸽代理的页面</a>
-              <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
-              <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
-              <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
+              <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">由飞鸽代理的页面</a>
+              <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
+              <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
+              <a href="http://guguan123.ysepan.com/" rel="nofollow" class="change-protocol">永硕E盘</a>
             </p>
           </div>
-          <a href="https://wapmz.com/in/51" class="wapmz"><img src="https://wapmz.com/cn/big/51" alt="wapmz.com"></a>
+          <a href="http://wapmz.com/in/51" class="wapmz"><img src="https://wapmz.com/cn/big/51" alt="wapmz.com"></a>
         </div>
       </div>
     </div>
