--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
               <a id="ASUSDM" href="host:8085" rel="nofollow">ASUS Download Master</a>
             </p>
             <p>
-              <a href="http://guguan.freehk.svipss.top/" rel="nofollow">Websites proxy by fgnwct.com</a>
-              <a href="http://guguan.000.pe/" rel="nofollow">Blog</a>
-              <a href="http://guguan123.github.io/" rel="nofollow">Pages hosted by Github</a>
-              <a href="http://www.i-i.me/507.html" rel="nofollow">Third party HomePage</a>
-              <a href="http://guguan123.ysepan.com/" rel="nofollow">YongShuo network disk</a>
+              <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">Websites proxy by fgnwct.com</a>
+              <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">Blog</a>
+              <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">Pages hosted by Github</a>
+              <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">Third party HomePage</a>
+              <a href="http://guguan123.ysepan.com/" rel="nofollow" class="change-protocol">YongShuo network disk</a>
             </p>
           </div>
           <div id="b" style="display:none">
@@ -211,10 +211,10 @@
               <a href="http://frp-fly.top:58371/" rel="nofollow">ASUS Download Master</a>
             </p>
             <p>
-              <a href="http://guguan.000.pe/" rel="nofollow">Blog</a>
-              <a href="http://guguan123.github.io/" rel="nofollow">Pages hosted by Github</a>
-              <a href="http://www.i-i.me/507.html" rel="nofollow">Third party HomePage</a>
-              <a href="http://guguan123.ysepan.com/" rel="nofollow">YongShuo network disk</a>
+              <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">Blog</a>
+              <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">Pages hosted by Github</a>
+              <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">Third party HomePage</a>
+              <a href="http://guguan123.ysepan.com/" rel="nofollow" class="change-protocol">YongShuo network disk</a>
             </p>
           </div>
           <div id="c" style="display:none">
@@ -227,11 +227,11 @@
               <a href="http://frp-fly.top:58371/" rel="nofollow">ASUS Download Master</a>
             </p>
             <p>
-              <a href="http://guguan.freehk.svipss.top/" rel="nofollow">Websites proxy by fgnwct.com</a>
-              <a href="http://guguan.000.pe/" rel="nofollow">Blog</a>
-              <a href="http://guguan123.github.io/" rel="nofollow">Pages hosted by Github</a>
-              <a href="http://www.i-i.me/507.html" rel="nofollow">Third party HomePage</a>
-              <a href="http://guguan123.ysepan.com/" rel="nofollow">YongShuo network disk</a>
+              <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">Websites proxy by fgnwct.com</a>
+              <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">Blog</a>
+              <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">Pages hosted by Github</a>
+              <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">Third party HomePage</a>
+              <a href="http://guguan123.ysepan.com/" rel="nofollow" class="change-protocol">YongShuo network disk</a>
             </p>
           </div>
           <div id="d">
@@ -240,13 +240,13 @@
               <a href="./Gaokao_Countdown.html" rel="nofollow">College Entrance Exam Countdown</a>
             </p>
             <p>
-              <a href="http://guguan.freehk.svipss.top/" rel="nofollow">Websites proxy by fgnwct.com</a>
-              <a href="http://guguan.000.pe/" rel="nofollow">Blog</a>
-              <a href="http://www.i-i.me/507.html" rel="nofollow">Third party HomePage</a>
-              <a href="http://guguan123.ysepan.com/" rel="nofollow">YongShuo network disk</a>
+              <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">Websites proxy by fgnwct.com</a>
+              <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">Blog</a>
+              <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">Third party HomePage</a>
+              <a href="http://guguan123.ysepan.com/" rel="nofollow" class="change-protocol">YongShuo network disk</a>
             </p>
           </div>
-          <a href="https://wapmz.com/in/51" class="wapmz"><img src="https://wapmz.com/cn/big/51" alt="wapmz.com"></a>
+          <a href="http://wapmz.com/in/51" class="wapmz"><img src="https://wapmz.com/cn/big/51" alt="wapmz.com"></a>
         </div>
       </div>
     </div>
