modified:   StartPage/StartPage.htm

--- a/StartPage/StartPage.htm
+++ b/StartPage/StartPage.htm
@@ -38,7 +38,7 @@
     </DIV>
   </DIV>
   <footer class="copyright">
-    <p>无版权 &copy; 2023 <span id="domain"></span>. 没有所有权利。</p>
+    <p>无版权 &copy; 2023 <span id="domain"></span>. 不保留所有权利。</p>
   </footer>
   <script>
     // 获取当前域名并替换文本内容
