优化切换语言按钮

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </noscript>
     <div class="main_page">
       <div class="page_header floating_element">
-        <button class="button" type="button" title="切换为中文页面">中文</button>
+        <button class="SwitchLanguage" type="button" title="切换为中文页面">中文</button>
         <img src="./images/ubuntu-logo.png" alt="Ubuntu Logo"
              style="width:184px;height:146px;" class="floating_element" id="logo" />
         <div>
