--- a/index_zh.html
+++ b/index_zh.html
@@ -24,7 +24,7 @@
     </noscript>
     <div class="main_page">
       <div class="page_header floating_element">
-        <button class="button" type="button" title="Change to English page">English</button>
+        <button class="SwitchLanguage" type="button" title="Change to English page">English</button>
         <img src="./images/ubuntu-logo.png" alt="Ubuntu Logo"
              style="width:184px;height:146px;" class="floating_element" id="logo" />
         <div>
