--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL redirect</a>
               <a href="./file_list.html" rel="nofollow">File List</a>
-              <a id="MCSM" href="host:23333" rel="nofollow">MCSManager Panel</a>
-              <a id="qBT" href="host:8080" rel="nofollow">qBittorrent Web UI</a>
-              <a id="Netdisk" href="host:5244" rel="nofollow">Netdisk</a>
-              <a id="router" href="host:8084" rel="nofollow">Router Web</a>
-              <a id="ASUSDM" href="host:8085" rel="nofollow">ASUS Download Master</a>
+              <a href="host:23333" rel="nofollow" class="custom-link">MCSManager Panel</a>
+              <a href="host:8080" rel="nofollow" class="custom-link">qBittorrent Web UI</a>
+              <a href="host:5244" rel="nofollow" class="custom-link">Netdisk</a>
+              <a href="host:8084" rel="nofollow" class="custom-link">Router Web</a>
+              <a href="host:8085" rel="nofollow" class="custom-link">ASUS Download Master</a>
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">Websites proxy by fgnwct.com</a>
