modified:   URL_redirect.html

--- a/URL_redirect.html
+++ b/URL_redirect.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./images/URL_redirect.svg" type="image/svg+xml">
 
     <!--[if lt IE 9]>
-        <script src="https://cdn.bootcdn.net/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://cdn.bootcdn.net/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
 
     <script type="text/javascript">
