添加服务器状态监控页面

--- a/index_zh.html
+++ b/index_zh.html
@@ -212,6 +212,7 @@
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
+              <a href="./uptimeStatusRevise/" rel="nofollow">服务器状态监控</a>
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">由飞鸽代理的页面</a>
