更改输入框的属性

--- a/URL_redirect.html
+++ b/URL_redirect.html
@@ -80,7 +80,7 @@
         <!--主要的页面元素-->
         <form onsubmit="addPrefix(); return false;">
             <label id="Label" for="myURL">URL:</label>
-            <input type="url" id="myURL" name="url">
+            <input id="myURL" name="url" inputmode="url">
             <button type="button" onclick="addPrefix()" id="Button" title="Redirects to this URL">Go</button>
         </form>
     </div>
