modified:   markdown-viewer.html

--- a/markdown-viewer.html
+++ b/markdown-viewer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<!-- 使用案例：https://example.com/markdown-viewer.html?markdownUrl=https://example.com/example.md -->
 <head>
     <title>Markdown文档查看器</title>
     <style>
