modified:   index_zh.html

--- a/index_zh.html
+++ b/index_zh.html
@@ -164,7 +164,7 @@
               <a href="//host:5244" rel="nofollow" class="custom-link">网盘</a>
               <a href="//host:8084" rel="nofollow" class="custom-link">路由器Web管理</a>
               <a href="//host:8085" rel="nofollow" class="custom-link">华硕下载大师</a>
-              <a href="./uptime-status/index.html" rel="nofollow">服务器状态监控</a>
+              <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
               <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
             </p>
             <p>
@@ -183,7 +183,7 @@
               <a href="./qbt/" rel="nofollow">qBittorrent网页UI</a>
               <a href="http://kr-nc-bgp-1.openfrp.top:52440/" rel="nofollow">网盘</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
-              <a href="./uptime-status/index.html" rel="nofollow">服务器状态监控</a>
+              <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
               <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
             </p>
             <p>
@@ -198,7 +198,7 @@
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
-              <a href="./uptimeStatusRevise/index.html" rel="nofollow">服务器状态监控</a>
+              <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">由飞鸽代理的页面</a>
