将图片转移到图床上

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="main_page">
       <div class="page_header floating_element">
         <button class="SwitchLanguage" type="button" title="切换为中文页面" lang="zh-cn">中文</button>
-        <img src="./images/ubuntu-logo.png" alt="Ubuntu Logo"
+        <img src="https://s1.imagehub.cc/images/2024/01/31/aef1e6a1c2984515c15cb4da1cad387e.png" alt="Ubuntu Logo"
              style="width:184px;height:146px;" class="floating_element" id="logo" />
         <div>
           <span style="margin-top: 1.5em;" class="floating_element">
