修改了部分失效的超链接

--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
               <a href="./URL_redirect.html" rel="nofollow">URL redirect</a>
               <a href="./file_list.html" rel="nofollow">File List</a>
               <a href="//host:23333" rel="nofollow" class="custom-link">MCSManager Panel</a>
-              <a href="//host:8080" rel="nofollow" class="custom-link">qBittorrent Web UI</a>
-              <a href="//host:5244" rel="nofollow" class="custom-link">Netdisk</a>
+              <a href="./qbt/" rel="nofollow" class="custom-link">qBittorrent Web UI</a>
+              <a href="//host:5244" rel="nofollow" class="custom-link">Alist</a>
               <a href="//host:8084" rel="nofollow" class="custom-link">Router Web</a>
               <a href="//host:8085" rel="nofollow" class="custom-link">ASUS Download Master</a>
             </p>
@@ -204,7 +204,7 @@
               <a href="./file_list.html" rel="nofollow">File List</a>
               <a href="http://kr-se-cncn-1.openfrp.top:20000/" rel="nofollow">MCSManager Panel</a>
               <a href="./qbt/" rel="nofollow">qBittorrent Web UI</a>
-              <a href="http://kr-nc-bgp-1.openfrp.top:52440/" rel="nofollow">Netdisk</a>
+              <a href="http://kr-nc-bgp-1.openfrp.top:52440/" rel="nofollow">Alist</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">ASUS Download Master</a>
             </p>
             <p>
@@ -220,7 +220,7 @@
               <a href="./file_list.html" rel="nofollow">File List</a>
               <a href="http://kr-se-cncn-1.openfrp.top:20000/" rel="nofollow">MCSManager Panel</a>
               <a href="https://guguan.freehk.svipss.top/qbt/" rel="nofollow">qBittorrent Web UI</a>
-              <a href="http://kr-nc-bgp-1.openfrp.top:52440/" rel="nofollow">Netdisk</a>
+              <a href="http://kr-nc-bgp-1.openfrp.top:52440/" rel="nofollow">Alist</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">ASUS Download Master</a>
             </p>
             <p>
