--- a/index_zh.html
+++ b/index_zh.html
@@ -160,7 +160,7 @@
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
               <a href="//host:23333" rel="nofollow" class="custom-link">MCSManager面板</a>
-              <a href="//host:8080" rel="nofollow" class="custom-link">qBittorrent网页UI</a>
+              <a href="./qbt/" rel="nofollow" class="custom-link">qBittorrent网页UI</a>
               <a href="//host:5244" rel="nofollow" class="custom-link">网盘</a>
               <a href="//host:8084" rel="nofollow" class="custom-link">路由器Web管理</a>
               <a href="//host:8085" rel="nofollow" class="custom-link">华硕下载大师</a>
