添加和更新链接

--- a/index_zh.html
+++ b/index_zh.html
@@ -19,6 +19,7 @@
     <noscript>
       <h1>需要 JavaScript！您必须启用 JavaScript 以确保网页正常运行</h1>
     </noscript>
+    <h1 style="display:none">浏览器太旧了！您必须更新浏览器以确保网页正常运行</h1>
     <div class="main_page">
       <div class="page_header floating_element">
         <button class="SwitchLanguage" type="button" title="Change to English page" lang="en">English</button>
@@ -166,6 +167,8 @@
               <a href="//host:8085" rel="nofollow" class="custom-link">华硕下载大师</a>
               <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
               <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
+              <a href="./iis/" rel="nofollow" class="custom-link">Windows服务器</a>
+              <a href="./iis/certsrv/" rel="nofollow" class="custom-link">PC2412证书服务</a>
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">由飞鸽代理的页面</a>
@@ -179,12 +182,13 @@
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
-              <a href="http://kr-se-cncn-1.openfrp.top:20000/" rel="nofollow">MCSManager面板</a>
+              <a href="https://mcsm.guguan.hz.cz/" rel="nofollow">MCSManager面板</a>
               <a href="./qbt/" rel="nofollow">qBittorrent网页UI</a>
-              <a href="http://kr-nc-bgp-1.openfrp.top:52440/" rel="nofollow">网盘</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
               <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
               <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
+              <a href="./iis/" rel="nofollow" class="custom-link">Windows服务器</a>
+              <a href="./iis/certsrv/" rel="nofollow" class="custom-link">PC2412证书服务</a>
             </p>
             <p>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
