--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
               <a href="//host:5244" rel="nofollow" class="custom-link">Alist</a>
               <a href="//host:8084" rel="nofollow" class="custom-link">Router Web</a>
               <a href="//host:8085" rel="nofollow" class="custom-link">ASUS Download Master</a>
+              <a href="./iis/" rel="nofollow" class="custom-link">Windows Server</a>
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">Websites proxy by fgnwct.com</a>
@@ -206,6 +207,7 @@
               <a href="./qbt/" rel="nofollow">qBittorrent Web UI</a>
               <a href="http://kr-nc-bgp-1.openfrp.top:52440/" rel="nofollow">Alist</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">ASUS Download Master</a>
+              <a href="./iis/" rel="nofollow" class="custom-link">Windows Server</a>
             </p>
             <p>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">Blog</a>
