--- a/index_zh.html
+++ b/index_zh.html
@@ -168,7 +168,7 @@
               <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
               <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
               <a href="./iis/" rel="nofollow" class="custom-link">Windows服务器</a>
-              <a href="./iis/certsrv/" rel="nofollow" class="custom-link">PC2412证书服务</a>
+              <a href="./certsrv/" rel="nofollow" class="custom-link">PC2412证书服务</a>
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">由飞鸽代理的页面</a>
@@ -188,7 +188,7 @@
               <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
               <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
               <a href="./iis/" rel="nofollow" class="custom-link">Windows服务器</a>
-              <a href="./iis/certsrv/" rel="nofollow" class="custom-link">PC2412证书服务</a>
+              <a href="./certsrv/" rel="nofollow" class="custom-link">PC2412证书服务</a>
             </p>
             <p>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
