修复错误的连接并更新Monitor-Specific API Keys

--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
               <a href="//host:5244" rel="nofollow" class="custom-link">Alist</a>
               <a href="//host:8084" rel="nofollow" class="custom-link">Router Web</a>
               <a href="//host:8085" rel="nofollow" class="custom-link">ASUS Download Master</a>
-              <a href="./iis/" rel="nofollow" class="custom-link">Windows Server</a>
+              <a href="./iis/" rel="nofollow">Windows Server</a>
             </p>
             <p>
-              <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">Websites proxy by fgnwct.com</a>
+              <a href="https://server.guguan.hz.cz/" rel="nofollow">Websites proxy by FRP</a>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">Blog</a>
               <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">Pages hosted by Github</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">Third party HomePage</a>
@@ -207,7 +207,7 @@
               <a href="./qbt/" rel="nofollow">qBittorrent Web UI</a>
               <a href="http://kr-nc-bgp-1.openfrp.top:52440/" rel="nofollow">Alist</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">ASUS Download Master</a>
-              <a href="./iis/" rel="nofollow" class="custom-link">Windows Server</a>
+              <a href="./iis/" rel="nofollow">Windows Server</a>
             </p>
             <p>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">Blog</a>
@@ -226,7 +226,7 @@
               <a href="http://frp-fly.top:58371/" rel="nofollow">ASUS Download Master</a>
             </p>
             <p>
-              <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">Websites proxy by fgnwct.com</a>
+              <a href="https://server.guguan.hz.cz/" rel="nofollow">Websites proxy by FRP</a>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">Blog</a>
               <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">Pages hosted by Github</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">Third party HomePage</a>
@@ -239,7 +239,7 @@
               <a href="./Gaokao_Countdown.html" rel="nofollow">College Entrance Exam Countdown</a>
             </p>
             <p>
-              <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">Websites proxy by fgnwct.com</a>
+              <a href="https://server.guguan.hz.cz/" rel="nofollow">Websites proxy by FRP</a>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">Blog</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">Third party HomePage</a>
               <a href="http://guguan123.ysepan.com/" rel="nofollow">YongShuo network disk</a>
