--- a/index_zh.html
+++ b/index_zh.html
@@ -167,11 +167,11 @@
               <a href="//host:8085" rel="nofollow" class="custom-link">华硕下载大师</a>
               <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
               <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
-              <a href="./iis/" rel="nofollow" class="custom-link">Windows服务器</a>
-              <a href="./certsrv/" rel="nofollow" class="custom-link">PC2412证书服务</a>
+              <a href="./iis/" rel="nofollow">Windows服务器</a>
+              <a href="./certsrv/" rel="nofollow">PC2412证书服务</a>
             </p>
             <p>
-              <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">由飞鸽代理的页面</a>
+              <a href="https://server.guguan.hz.cz/" rel="nofollow">由FRP代理的页面</a>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
               <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
@@ -187,8 +187,8 @@
               <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
               <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
               <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
-              <a href="./iis/" rel="nofollow" class="custom-link">Windows服务器</a>
-              <a href="./certsrv/" rel="nofollow" class="custom-link">PC2412证书服务</a>
+              <a href="./iis/" rel="nofollow">Windows服务器</a>
+              <a href="./certsrv/" rel="nofollow">PC2412证书服务</a>
             </p>
             <p>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
@@ -205,7 +205,7 @@
               <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
             </p>
             <p>
-              <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">由飞鸽代理的页面</a>
+              <a href="https://server.guguan.hz.cz/" rel="nofollow">由FRP代理的页面</a>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
               <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
@@ -219,7 +219,7 @@
               <a href="./uptimeStatusRevise/" rel="nofollow">服务器状态监控</a>
             </p>
             <p>
-              <a href="http://guguan.freehk.svipss.top/" rel="nofollow" class="change-protocol">由飞鸽代理的页面</a>
+              <a href="https://server.guguan.hz.cz/" rel="nofollow">由FRP代理的页面</a>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
               <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
