--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               <a href="./iis/" rel="nofollow">Windows Server</a>
             </p>
             <p>
-              <a href="https://server.guguan.hz.cz/" rel="nofollow">Websites proxy by FRP</a>
+              <a href="https://www.guguan.hz.cz/" rel="nofollow">Websites proxy by FRP</a>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">Blog</a>
               <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">Pages hosted by Github</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">Third party HomePage</a>
@@ -226,7 +226,7 @@
               <a href="http://frp-fly.top:58371/" rel="nofollow">ASUS Download Master</a>
             </p>
             <p>
-              <a href="https://server.guguan.hz.cz/" rel="nofollow">Websites proxy by FRP</a>
+              <a href="https://www.guguan.hz.cz/" rel="nofollow">Websites proxy by FRP</a>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">Blog</a>
               <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">Pages hosted by Github</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">Third party HomePage</a>
@@ -239,7 +239,7 @@
               <a href="./Gaokao_Countdown.html" rel="nofollow">College Entrance Exam Countdown</a>
             </p>
             <p>
-              <a href="https://server.guguan.hz.cz/" rel="nofollow">Websites proxy by FRP</a>
+              <a href="https://www.guguan.hz.cz/" rel="nofollow">Websites proxy by FRP</a>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">Blog</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">Third party HomePage</a>
               <a href="http://guguan123.ysepan.com/" rel="nofollow">YongShuo network disk</a>
