--- a/index_zh.html
+++ b/index_zh.html
@@ -171,7 +171,7 @@
               <a href="./certsrv/" rel="nofollow">PC2412证书服务</a>
             </p>
             <p>
-              <a href="https://server.guguan.hz.cz/" rel="nofollow">由FRP代理的页面</a>
+              <a href="https://www.guguan.hz.cz/" rel="nofollow">由FRP代理的页面</a>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
               <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
@@ -205,7 +205,7 @@
               <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
             </p>
             <p>
-              <a href="https://server.guguan.hz.cz/" rel="nofollow">由FRP代理的页面</a>
+              <a href="https://www.guguan.hz.cz/" rel="nofollow">由FRP代理的页面</a>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
               <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
@@ -219,7 +219,7 @@
               <a href="./uptimeStatusRevise/" rel="nofollow">服务器状态监控</a>
             </p>
             <p>
-              <a href="https://server.guguan.hz.cz/" rel="nofollow">由FRP代理的页面</a>
+              <a href="https://www.guguan.hz.cz/" rel="nofollow">由FRP代理的页面</a>
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
               <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
