更新超链接链接地址

--- a/index_zh.html
+++ b/index_zh.html
@@ -165,7 +165,7 @@
               <a href="//host:5244" rel="nofollow" class="custom-link">网盘</a>
               <a href="//host:8084" rel="nofollow" class="custom-link">路由器Web管理</a>
               <a href="//host:8085" rel="nofollow" class="custom-link">华硕下载大师</a>
-              <a href="./uptimeStatusRevise/index.html" rel="nofollow">服务器状态监控</a>
+              <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
               <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
               <a href="./iis/" rel="nofollow">Windows服务器</a>
               <a href="./certsrv/" rel="nofollow">PC2412证书服务</a>
@@ -185,7 +185,7 @@
               <a href="https://mcsm.guguan.hz.cz/" rel="nofollow">MCSManager面板</a>
               <a href="./qbt/" rel="nofollow">qBittorrent网页UI</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
-              <a href="./uptimeStatusRevise/index.html" rel="nofollow">服务器状态监控</a>
+              <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
               <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
               <a href="./iis/" rel="nofollow">Windows服务器</a>
               <a href="./certsrv/" rel="nofollow">PC2412证书服务</a>
