--- a/index_zh.html
+++ b/index_zh.html
@@ -6,7 +6,7 @@
     See: https://launchpad.net/bugs/1966004
   -->
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
     <title>Apache2 Ubuntu默认页面：它可以工作</title>
     <script type="text/javascript" src="script.js"></script>
