更改工具类页面的位置

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="content_section_text">
           <div id="a" style="display:none">
             <p>
-              <a href="./URL_redirect.html" rel="nofollow">URL redirect</a>
+              <a href="./tools/URL_redirect.html" rel="nofollow">URL redirect</a>
               <a href="./file_list.html" rel="nofollow">File List</a>
               <a href="//host:23333" rel="nofollow" class="custom-link">MCSManager Panel</a>
               <a href="./qbt/" rel="nofollow" class="custom-link">qBittorrent Web UI</a>
@@ -201,7 +201,7 @@
           </div>
           <div id="b" style="display:none">
             <p>
-              <a href="./URL_redirect.html" rel="nofollow">URL redirect</a>
+              <a href="./tools/URL_redirect.html" rel="nofollow">URL redirect</a>
               <a href="./file_list.html" rel="nofollow">File List</a>
               <a href="http://kr-se-cncn-1.openfrp.top:20000/" rel="nofollow">MCSManager Panel</a>
               <a href="./qbt/" rel="nofollow">qBittorrent Web UI</a>
@@ -218,7 +218,7 @@
           </div>
           <div id="c" style="display:none">
             <p>
-              <a href="./URL_redirect.html" rel="nofollow">URL redirect</a>
+              <a href="./tools/URL_redirect.html" rel="nofollow">URL redirect</a>
               <a href="./file_list.html" rel="nofollow">File List</a>
               <a href="http://kr-se-cncn-1.openfrp.top:20000/" rel="nofollow">MCSManager Panel</a>
               <a href="https://www.guguan.hz.cz/qbt/" rel="nofollow">qBittorrent Web UI</a>
@@ -235,7 +235,7 @@
           </div>
           <div id="d">
             <p>
-              <a href="./URL_redirect.html" rel="nofollow">URL redirect</a>
+              <a href="./tools/URL_redirect.html" rel="nofollow">URL redirect</a>
               <a href="./Gaokao_Countdown.html" rel="nofollow">College Entrance Exam Countdown</a>
             </p>
             <p>
