--- a/index_zh.html
+++ b/index_zh.html
@@ -158,7 +158,7 @@
         <div class="content_section_text">
           <div id="a" style="display:none">  <!--通过局域网或者ZeroTier访问-->
             <p>
-              <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
+              <a href="./tools/URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
               <a href="//host:23333" rel="nofollow" class="custom-link">MCSManager面板</a>
               <a href="./qbt/" rel="nofollow" class="custom-link">qBittorrent网页UI</a>
@@ -180,7 +180,7 @@
           </div>
           <div id="b" style="display:none">  <!--通过内网穿透访问-->
             <p>
-              <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
+              <a href="./tools/URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
               <a href="https://mcsm.guguan.hz.cz/" rel="nofollow">MCSManager面板</a>
               <a href="./qbt/" rel="nofollow">qBittorrent网页UI</a>
@@ -199,7 +199,7 @@
           </div>
           <div id="c" style="display:none">  <!--访问的是云服务器（废弃）-->
             <p>
-              <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
+              <a href="./tools/URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
               <a href="./uptimeStatusRevise" rel="nofollow">服务器状态监控</a>
@@ -214,7 +214,7 @@
           </div>
           <div id="d">  <!--访问的是GitHub Pages-->
             <p>
-              <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
+              <a href="./tools/URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
               <a href="./uptimeStatusRevise/" rel="nofollow">服务器状态监控</a>
             </p>
