将图片的黑暗模式切换改成使用css实现，优化了页面的加载时间

--- a/index_zh.html
+++ b/index_zh.html
@@ -24,7 +24,9 @@
       <div class="page_header floating_element">
         <button class="SwitchLanguage" type="button" title="Change to English page" lang="en">English</button>
         <img src="https://s1.imagehub.cc/images/2024/01/31/aef1e6a1c2984515c15cb4da1cad387e.png" alt="Ubuntu Logo"
-             style="width:184px;height:146px;" class="floating_element" id="logo" />
+             style="width:184px;height:146px;" class="floating_element light-mode" id="logo" />
+        <img src="https://s1.imagehub.cc/images/2024/01/31/149673b807a9460f17a5c8801097b1df.png" alt="Ubuntu Logo"
+             style="width:184px;height:146px;" class="floating_element dark-mode" id="logo" />
         <div>
           <span style="margin-top: 1.5em;" class="floating_element">
             Apache2 默认页面
