--- a/index_zh.html
+++ b/index_zh.html
@@ -214,6 +214,7 @@
           <div id="d">  <!--访问的是GitHub Pages-->
             <p>
               <a href="./tools/URL_redirect.html" rel="nofollow">URL重定向</a>
+              <a href="./tools/tracker.txt" rel="nofollow">Tracker服务器列表</a>
               <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
               <a href="./uptimeStatusRevise/" rel="nofollow">服务器状态监控</a>
             </p>
