--- a/index_zh.html
+++ b/index_zh.html
@@ -177,6 +177,7 @@
               <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
               <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
+              <a href="http://tracker.guguan.000.pe/" rel="nofollow" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <div id="b" style="display:none">  <!--通过内网穿透访问-->
@@ -195,6 +196,7 @@
               <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
               <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
+              <a href="http://tracker.guguan.000.pe/" rel="nofollow" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <div id="c" style="display:none">  <!--访问的是云服务器（废弃）-->
@@ -209,6 +211,7 @@
               <a href="http://guguan123.github.io/" rel="nofollow" class="change-protocol">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
               <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
+              <a href="http://tracker.guguan.000.pe/" rel="nofollow" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <div id="d">  <!--访问的是GitHub Pages-->
@@ -223,6 +226,7 @@
               <a href="http://guguan.000.pe/" rel="nofollow" class="change-protocol">博客</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow" class="change-protocol">第三方主页</a>
               <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
+              <a href="http://tracker.guguan.000.pe/" rel="nofollow" class="change-protocol">BitTorrent Tracker</a>
             </p>
           </div>
           <a href="http://wapmz.com/in/51" class="wapmz"><img src="https://wapmz.com/cn/big/51" alt="wapmz.com"></a>
